--- a/VRChat/96/914196.html
+++ b/VRChat/96/914196.html
@@ -104,7 +104,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "kYUU7Bb1s9EcDAdgJZsNvH8hS4gWkL4oW27I+bA5XZo="></script>
+    "RnMKi3l/2wtH6C75QuVYHAkeBET20Pzlt9bb8UBUKLo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ローポリお人形","description":"「ローポリお人形」モデルのunitypackageとfbxデータです。\nMMDボーンが入っています、指ボーンはありません。\nテクスチャーはピンクとグリーンの2色あります。\n\nunityや3Dモデリングソフトでお使いいただけます。\nVRChatにアバターとしてアップロードできます\nワールドの小物として部屋に置いたり、\nアクセサリーとして他モデルにくっつけるのもOKです。\n\n■利用規約\nこちらを御覧ください\nhttps://kuroneko-youhinten.wixsite.com/mysite/kiyaku-preview\n\n■免責事項\n黒井が制作した3Dモデルに、起因または関連する、使用またはその他の扱いによって生じる一切の請求、損害、その他の義務について何らの責任も負いません。","url":"https://booth.pm/ja/items/914196","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/3101f45b-b262-485c-a1a1-3d2a8da33466/i/914196/0f889cae-8b2d-4356-afed-0d64b92f800c_base_resized.jpg"}
     </script>
@@ -115,7 +115,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kYUU7Bb1s9EcDAdgJZsNvH8hS4gWkL4oW27I+bA5XZo="></script>
+    nonce="RnMKi3l/2wtH6C75QuVYHAkeBET20Pzlt9bb8UBUKLo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -431,9 +431,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
