--- a/VRChat/85/817885.html
+++ b/VRChat/85/817885.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "HH4TPuIClHMuAHIf7Q/Ll6LjVsDgnJGufyd1m2RxBM0="></script>
+    "OaG3GdSroDqD9CdrSbyxFQgfHQeIpaP8IG3On/VHU7g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【実物】頭に突き刺して！車軸ピンバッジ","description":"君も頭に車軸を通して車輪を付けよう！\n前代未聞の脳髄貫通型車軸ピンバッジ！\n\n※この商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。","url":"https://booth.pm/ja/items/817885","offers":{"priceCurrency":"JPY","@type":"Offer","price":"920"},"image":"https://booth.pximg.net/c/620x620/073f790d-621e-4ecf-a85e-04aa2017a614/i/817885/a30c9dbc-44ac-47e9-86ba-49b5b4c326bd_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HH4TPuIClHMuAHIf7Q/Ll6LjVsDgnJGufyd1m2RxBM0="></script>
+    nonce="OaG3GdSroDqD9CdrSbyxFQgfHQeIpaP8IG3On/VHU7g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -382,7 +382,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/08/05</span>
+                                        "autolink u-text-wrap">2023-08-05</span>
                                       </div>
                                     </div>
                                   </div>
@@ -416,9 +416,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
