--- a/VRChat/47/1330347.html
+++ b/VRChat/47/1330347.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "kFTNAoi1Yv5FugUEv01vj9UgNrBpok78dbJJjIR/LRk="></script>
+    "fC76kqA6U+gwu3mzB0d1cq/F/nhde6NbYWj+Dm4UlWw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ClipCostumeShaders","description":"　アバターの衣服等の指定した部分を自分の視点からのみ見えなくするシェーダーです。マフラー、アクセサリー等で首回りを覆われて視界が阻害される場合に効果的です。このシェーダーを使用していても、VRカメラやミラー、他ユーザーから見た場合はメッシュが見えなくなることはないため、見た目を損なうことはありません。\n　synqark様が開発された「Arktoon-Shaders-1.0.2.6」及びすなお様が開発された「SunaoShader v1.4.4」を改変し、MITLicense下において配布しています。\n\n\nArktoon-Shaders\n　Booth：https://booth.pm/ja/items/1027997\n　Github：https://github.com/synqark/Arktoon-Shaders\n\nSunao Shader\n　Booth：https://booth.pm/ja/items/1723985\n\n〇内容物\n・Arktoon-Shaders_ClipCostume.unitypackage\n・Sunao Shader_ClipCostume_144.unitypackage\n・README.txt\n使用方法等、詳細は付属のREADMEをお読みください。\n\n\n〇注意\n・本unitypackageにはぽんでろ様オリジナルモデル「ミーシェ」は含まれません。また両本体より改変した部分しか含まれません。Arktoon-Shaders-1.0.2.6及びSunao Shader v1.4.4をインポートしたうえでご利用ください。\n\n\n〇更新\n　2021/11/16　Arktoon-Shaders-1.0.2.6全バリュエーションに対応。Sunao Shader v1.4.4に対応。SDK2サポートを終了し、SDK3向けの仕様に変更。\n　2020/10/12　Sunao Shader v1.4.0に対応\n　2020/07/25　Sunao Shader v1.3.2改変版を追加\n　2019/12/09　v1.4「Arktoon-Shaders-1.0.2.6」の公開に伴う更新。マスク画像なしでも視界からの距離のみで透過処理を行うようにしました。\n　2019/07/06　v1.3「Arktoon-Shaders-1.0.2.5」の公開に伴う更新並びにコードの整理をしました。ミラー内でも透過しないようにしました。\n　2019/06/09　v1.2足元の識別用メッシュをアバター視点から見えにくくしました。\n　2019/04/26　v1.1特定のライティング下において透過が十分でない不具合を修正しました。\n　2019/04/24　v1.0公開\n\n\n改変者　わた　VRChat:wata_pj　Twitter:@wata_pj\n※DMはほぼ気づかないので@つきツイート等でご連絡ください。","url":"https://booth.pm/ja/items/1330347","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/50d2eca2-0b1b-4627-a91d-c16116a1bf1d/i/1330347/560b6f1b-dc7c-488a-b9f3-9ce6f74ee8c2_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kFTNAoi1Yv5FugUEv01vj9UgNrBpok78dbJJjIR/LRk="></script>
+    nonce="fC76kqA6U+gwu3mzB0d1cq/F/nhde6NbYWj+Dm4UlWw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -423,9 +423,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
