--- a/VRChat/06/1330406.html
+++ b/VRChat/06/1330406.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "9+ZA5LX0SWAMekp7Sqp9PGvybPx7NtKkU4SAq/eKcOs="></script>
+    "ObtvKYJd7m7UN7FTBpF216RqOvUczJkdKzKG7A/073E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Original 3D Model [Ichiyo Akina] + Unity Package V.1.0.0 + VRM File Data","description":"Original 3D model Character \"Ichiyo Akina\"\nAn Oni with 2 Katana and Demonic Katana as her main weapon.\n\nit is a Humanoid 3D Character with full Humanoid Rig set up to be used for Game Character Asset or you can use it for VRchat but you need some adjustment for that.\n\n● Contents\n\n01. FBX File Data [Characters and Weapon].\n02. All Texture data for the characters.\n03. UnityPackage Data Humanoid Setup and material set up.\n04 Unity Chan Toon Shader (UTS).\n\n● About Commercial Use\n\n* This model is made and design for a Game   Character Assets but it also can be used for Animation/Video/Vrchat/Images. \n\n** you are free to use this model for any commercial game project but please inform me if you use it for commercial purpose and you can just put my name in you credits i'll be appreciate it so much for it.\n\n\n● End of User Term\n\n- please don't redistribute this model in public.\n\n- you may modified this model ,but you can not redistribute the modified model in to public.\n\n● Update (05/06/2018)\n- Add the lose Texture for tongue.\n- Add VRM Data.\n- Add Physics and Facial Blendshape in VRM\n  Data.\n\n** This model will be get keep update from now on so i will try to improve the model and add more content to this character in the future feel free to contact me if you have some trouble from this model. \n\nThank you !!\n\n● Other Links\nSketchfab 3D View : https://skfb.ly/6JCuV\n\n● Contacts\nTwitter : https://twitter.com/Arunorudo_Rui\nFaceBook : https://www.facebook.com/IzgRui\n\n","url":"https://booth.pm/ja/items/1330406","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/c4a853fe-13e0-42a7-be98-dc5cd74cd540/i/1330406/27e3c198-12b7-42d8-8b01-2aca705eb659_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9+ZA5LX0SWAMekp7Sqp9PGvybPx7NtKkU4SAq/eKcOs="></script>
+    nonce="ObtvKYJd7m7UN7FTBpF216RqOvUczJkdKzKG7A/073E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -538,9 +538,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
