--- a/VRChat/67/1340967.html
+++ b/VRChat/67/1340967.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "o4CtQlpC2LZohPUVF596dzMX4js9H4sPgmFe9X184Ws="></script>
+    "I9sd2davl3ZpBIv4ok2VUNSoTlgaaIiZLCD5ThlC9cY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC向けニコニコキャップ","description":"VRC向けのキャップの3Dモデルです。\n☆内容物\n・psd...cap.psdとcap1.psdが入っています。\n・texture...cap.pngとcap1.pngが入っています。\n・cap.fbx...capのfbxです。\n・cap.unitypakage...capのunitypakageです。\n・README.txt...必ず読んでください\n\n☆注意\n・色は灰色の1色のみです。\n・ロゴの部分は好きに変えれます.\ntextureは２つありますが、紹介画像のように少し違うだけですが、よかったら。。。\n\n使用前に同梱されている利用規約を必ずお読みください。","url":"https://booth.pm/ja/items/1340967","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/0f59b4f0-e50a-4935-aa78-b1833cb81066/i/1340967/279cf1a1-57a0-451c-88e1-49de9f8a85ff_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="o4CtQlpC2LZohPUVF596dzMX4js9H4sPgmFe9X184Ws="></script>
+    nonce="I9sd2davl3ZpBIv4ok2VUNSoTlgaaIiZLCD5ThlC9cY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -476,9 +476,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
