--- a/VRChat/12/1340912.html
+++ b/VRChat/12/1340912.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Daxa9pi4eEg8nDuqyyS6OcBFB7tCf5YYtxMoJLHOsnc="></script>
+    "1GErWOu6Gr2HySlrlLOYL06Dk1kHuaWsh9NZQ8Ne994="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"バーチャルニキシー管時計【VRChat･Unity想定】","description":"VRChatや他のUnity環境での利用を想定した，実際に時間表示が可能なニキシー管時計の3Dモデルです．VRChatに依存しない独立環境でも時間表示が可能なスクリプトが付属しています．\nA 3D model of a Nixie tube clock that can actually display the time, for use with VRChat or other standalone Unity environments, with scripts.\n\nこだわりポイント:\n　● 現物の金属細工感が出るようにポリゴン数を割いています\n　● 数字の表示位置が現物のように前後します\n　● 表示が微妙にちらつくようにしてあります(OFFにもできます)\n　● posteffectなしでもある程度光っているよう見えます\n　　● (電極自体が発光しているのではありません)\n　　● (bloomをONにするほうが断然キレイです)\n　● SIDEVIEWタイプとTOPVIEWタイプの2種類用意しています．\n\n全体で約5万ポリゴンあり，マテリアル数も12と決して軽量とは言えません．ほどほどに細かく作成しているため，どちらかというとニキシー管自体を愛でたい人向けです．\n\n[2021-05-23 v2.0.0] 数字表示用スクリプトを追加．階層構造を修正，サンプルシーン変更．\n\n石油王向けオプションにはblendファイルを同梱していますが，あくまでもおまけです．\n\nこちらのVRChatワールドにデモとして設置してあります。/ DEMO WORLD\nhttps://www.vrcw.net/world/detail/wrld_56b348fc-b1cb-4242-8587-9eb8e01ef399\n\n\nサポートや質問用のDiscordを設けているので，参加していただけると幸いです．更新連絡もスムーズになる他， WIPなプロジェクトの進捗を見ることができます．\nhttps://discord.gg/ShwP4Mj","url":"https://booth.pm/ja/items/1340912","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/81541f91-c514-450c-b882-988fe98aaa68/i/1340912/3902697b-fe8d-4157-8a07-afcfb799ce3e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Daxa9pi4eEg8nDuqyyS6OcBFB7tCf5YYtxMoJLHOsnc="></script>
+    nonce="1GErWOu6Gr2HySlrlLOYL06Dk1kHuaWsh9NZQ8Ne994="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -708,9 +708,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
