--- a/VRChat/62/1340662.html
+++ b/VRChat/62/1340662.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "wR6w96Kk4U/i+eDQ8e9WcVpTMpzn97ZFAILxq/orVYY="></script>
+    "g23aLDs7QNHvXYTwgIsmhTWNZ8fcLM4CwK4LNKn2kRc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3Dモデル] パンケーキ","description":"※NFTに関する事への使用を禁止します。※\n※Prohibited to be used for anything related to NFT.※\nVRChatでの使用を想定したモデルです\n大きく作っているのでUnity上でscaleを適正調整して下さい。\n\n・パンケーキ\n・重なっているパンケーキ\n・お皿\nでマテリアルを分けています。\n\n●内容物\n・テクスチャ×1\n・ノーマルマップ×1\n・arktoonシェーダー用glossマスク×1\n・fbxファイル×1","url":"https://booth.pm/ja/items/1340662","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/497a17f3-8b49-4d3f-b0de-666716ecfcf8/i/1340662/0274755c-376d-42f0-87b5-4c6cf802a861_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wR6w96Kk4U/i+eDQ8e9WcVpTMpzn97ZFAILxq/orVYY="></script>
+    nonce="g23aLDs7QNHvXYTwgIsmhTWNZ8fcLM4CwK4LNKn2kRc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -490,9 +490,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
